plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		name "Terraformers"
		(url "https://maven.terraformersmc.com/")
	}
	maven {
		(name 'Xander Maven')
		(url 'https://maven.isxander.dev/releases')
	}
	maven {
		(name = 'Ladysnake Mods')
		(url = 'https://maven.ladysnake.org/releases')
	}
	maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	//mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"


	implementation "net.kyori:adventure-text-minimessage:${project.adventure}"
	//implementation "net.kyori:adventure-platform-fabric:${project.adventure}"

	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
	//modApi "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"

	// moduleName is based on your mod loader and minecraft version, see the table above
	// version is the DevAuth version you are adding, check releases on GitHub or the badge above
	// With loom use the modRuntimeOnly configuration
	// With archloom and the forge-legacy module use the runtimeOnly configuration to avoid warnings
	// With ForgeGradle 5 or NeoGradle, use the runtimeOnly configuration
	// With ForgeGradle 2, use the implementation configuration as runtimeOnly appears to be broken
	modRuntimeOnly("me.djtheredstoner:DevAuth-${project.devauth_moduleName}:${project.devauth_version}")
	
}

loom {
	accessWidenerPath = file("src/main/resources/modmod.accesswidener")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}